# strictness-analysis

./: HLint.hs  Makefile  README  strictness.cabal
doc/: references.bib  report.aux  report.bbl  report.blg  report.dvi  report.lhs  report.out  report.ps  report.tex
src/: .ghci  Main.hs
src/Analysis/Conversion/ATm/: Algebra.hs  Catas.hs
src/Analysis/Conversion/HTm/: Algebra.hs  Catas.hs
src/Analysis/Inferencing/ATm/: HM.hs  HMLib.hs  HMTy.hs
src/Analysis/Inferencing/HTm/: HH.hs  HHLib.hs  HHSubs.hs  HHTy.hs
src/Language/: Eval.hs  Idiom.hs  Parser.hs  Parsing.hs  Position.hs  Scanner.hs  Scanning.hs
src/Language/ATm/: Printing.hs  Syntax.hs
src/Language/HTm/: Printing.hs  Syntax.hs
src/Language/Tm/: Printing.hs  Syntax.hs
test/: basic.fun  const.fun  expression.fun  fact.fun  fgh.fun  fib.fun  funpar.fun  idapp.fun  if.fun  ifconst.fun  partialexpr.fun  recdead.fun  rel.fun  simple.fun
