name:                  strictness
version:               0.0.1
synopsis:              Utilities for performing polyvariant strictness analysis.
description:           FP assignment for APA 2011 (Utrecht University)
category:              Compilers/Interpreters
copyright:             (c) 2011 Utrecht University
author:                Alessandro Vermeulen, Thijs Alkemade, Marcelo Barbosa de Sousa
maintainer:            Alessandro Vermeulen <a.vermeulen@students.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Apa/WebHome
tested-with:           GHC == 6.12.3, GHC == 7.0.3
build-type:            Simple
cabal-version:         >= 1.6
extra-source-files:    README, README.html, makefile, src/Main.hs, 
                       doc/report.lhs, doc/report.pdf, src/Analysis/Conversion/ATm/*.hs, src/Analysis/Conversion/HTm/*.hs, src/Analysis/Inferencing/ATm/*.hs, src/Analysis/Inferencing/HTm/*.hs, src/Language/ATm/*.hs, src/Language/HTm/*.hs, src/Language/Tm/*.hs, src/Language/*.hs, test/*.fun

executable strictness
  main-is:             Main.hs
  build-depends:       base, cmdargs, containers >= 0.3, cco >= 0.0.4, mtl
  other-modules:       
  hs-source-dirs:      src
  ghc-options:         -hide-package monads-tf
